compilador/src/sintatico/parser.rs
use crate::{
    lexico::{
        Lexico,
        token::{Token, TipoToken}
    },
    sintatico::arvore_sintatica::{NoAST, RegraAST}
};

const BUFFER_SIZE: usize = 10;

/// analisador sintatico\
/// transforma stream de tokens em uma arvore sintatica ou apresenta o primeiro erro sintatico encontrado
pub struct Parser {
    buffer_tokens: Vec<Token>,
    lex: Lexico,
    end: bool,
}

impl Parser {

    /// retorna instancia de parser
    pub fn new(lex: Lexico) -> Self {
        let buffer_tokens = vec![];
        let mut parser = Self {
            buffer_tokens,
            lex,
            end: false,
        };
        parser.read_token();
        parser
    }

    /// recarrega buffer, le proximo token e retorna token consumido
    fn read_token(&mut self) -> Token {

        // remove token anterior
        let anterior = if self.buffer_tokens.len() > 0 {
            self.buffer_tokens.remove(0)
        } else {
            Token::new(TipoToken::Vazio, "".to_string(), self.lex.line())
        };

        // recarrega buffer
        while self.buffer_tokens.len() < BUFFER_SIZE && !self.end {
            let next = self.lex.next_token();
            if next.tipo() == TipoToken::Fim {
                self.end = true;
            }
            self.buffer_tokens.push(next);
        }

        // println!("Lido: {}", &self.lookahead(1).tipo_string());
        anterior
    }

    /// avalia se `tipo` corresponde ao tipo do proximo token\
    /// retorna proximo token ou erro sintatico caso contrario
    fn match_(&mut self, tipo: TipoToken) -> Result<Token, NoAST> {
        if self.lookahead(1).tipo() == tipo {
            // println!("Match: {}", &self.lookahead(1).tipo_string());
            Ok(self.read_token())
        } else {
            Err(self.erro_sintatico())
        }
    }

    /// retorna uma copia do `k`esimo token do buffer, sem altera-lo
    fn lookahead(&mut self, k: usize) -> Token {
        let len = self.buffer_tokens.len();
        if len == 0 {
            return Token::new(TipoToken::Vazio, "".to_string(), self.lex.line());
        }
        if k - 1 >= len {
            return self.buffer_tokens[len - 1].copy()
        }
        self.buffer_tokens[k - 1].copy()
    }

    /// retorna mensagem de erro constando linha e lexema atuais\
    /// todo erro lexico ou sintatico eh propagado ate o no raiz recursivamente
    fn erro_sintatico(&mut self) -> NoAST {
        let linha = self.lookahead(1).linha();
        let lexema = self.lookahead(1).lexema();
        let mensagem = if self.lookahead(1).tipo() == TipoToken::Erro {
            lexema
        } else {
            format!("Linha {}: erro sintatico proximo a {}\n", linha, lexema)
        };
        
        NoAST::new(RegraAST::Erro { mensagem }, vec![]) 
    }

    // as funcoes a seguir representam as leis de formacao da gramatica da linguagem LA

    /// inicia a analise sintatica\
    /// programa : declaracoes 'algoritmo' corpo 'fim_algoritmo'
    pub fn programa(&mut self) -> NoAST {
        let mut filhos = vec![];

        let declaracoes = self.declaracoes();
        if declaracoes.is_erro() {
            return declaracoes
        }
        filhos.push(declaracoes);

        match self.match_(TipoToken::PCalgoritmo) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let corpo = self.corpo();
        if corpo.is_erro() {
            return corpo
        }
        filhos.push(corpo);

        match self.match_(TipoToken::PCfimAlgoritmo) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        match self.match_(TipoToken::Fim) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        NoAST::new(RegraAST::Programa, filhos)
    }

    /// declaracoes : declaracao declaracoes | <<vazio>>
    fn declaracoes(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::PCdeclare
            | TipoToken::PCconstante
            | TipoToken::PCtipo
            | TipoToken::PCprocedimento
            | TipoToken::PCfuncao  =>  {
                let declaracao = self.declaracao();
                if declaracao.is_erro() {
                    return declaracao
                }
                filhos.push(declaracao);

                let declaracoes = self.declaracoes();
                if declaracoes.is_erro() {
                    return declaracoes
                }
                filhos.push(declaracoes);

                NoAST::new(RegraAST::Declaracoes, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// declaracao : declaracao_local | declaracao_global
    fn declaracao(&mut self) -> NoAST {
        match self.lookahead(1).tipo() {
            TipoToken::PCdeclare
            | TipoToken::PCconstante
            | TipoToken::PCtipo => self.declaracao_local(),
            TipoToken::PCprocedimento
            | TipoToken::PCfuncao => self.declaracao_global(),
            _ => self.erro_sintatico()
        }
    }

    /// declaracao_local : 'declare' variavel
    ///     | 'tipo' IDENT ':' tipo
    ///     | 'constante' IDENT ':' tipo_basico '=' valor_constante
    fn declaracao_local(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::PCdeclare => {
                match self.match_(TipoToken::PCdeclare) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let variavel = self.variavel();
                if variavel.is_erro() {
                    return variavel
                }
                filhos.push(variavel);

                NoAST::new(RegraAST::DeclaracaoVariavel, filhos)
            }
            TipoToken::PCtipo => {
                match self.match_(TipoToken::PCtipo) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let ident = match self.match_(TipoToken::Ident) {
                    Ok(token) => NoAST::new_folha(RegraAST::Ident(token)),
                    Err(erro_sintatico) => return erro_sintatico
                };
                filhos.push(ident);
                
                match self.match_(TipoToken::Delim) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let tipo = self.tipo();
                if tipo.is_erro() {
                    return tipo
                }
                filhos.push(tipo);

                NoAST::new(RegraAST::DeclaracaoTipo, filhos)
            }
            TipoToken::PCconstante => {
                match self.match_(TipoToken::PCconstante) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let ident = match self.match_(TipoToken::Ident) {
                    Ok(token) => NoAST::new_folha(RegraAST::Ident(token)),
                    Err(erro_sintatico) => return erro_sintatico
                };
                filhos.push(ident);
                
                match self.match_(TipoToken::Delim) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let tipo_basico = self.tipo_basico();
                if tipo_basico.is_erro() {
                    return tipo_basico
                }
                filhos.push(tipo_basico);

                match self.match_(TipoToken::OpRelIgual) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let valor_constante = self.valor_constante();
                if valor_constante.is_erro() {
                    return valor_constante
                }
                filhos.push(valor_constante);

                NoAST::new(RegraAST::DeclaracaoConstante, filhos)
            }
            _ => self.erro_sintatico()
        }
    }

    /// variavel : identificador identificadores ':' tipo
    fn variavel(&mut self) -> NoAST {
        let mut filhos = vec![];

        let identificador = self.identificador();
        if identificador.is_erro() {
            return identificador
        }
        filhos.push(identificador);

        let identificadores = self.identificadores();
        if identificadores.is_erro() {
            return identificadores
        }
        filhos.push(identificadores);

        match self.match_(TipoToken::Delim) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let tipo = self.tipo();
        if tipo.is_erro() {
            return tipo
        }
        filhos.push(tipo);

        NoAST::new(RegraAST::Variavel, filhos)
    }

    /// identificador : IDENT identificador2 dimensao
    fn identificador(&mut self) -> NoAST {
        let mut filhos = vec![];

        let ident = match self.match_(TipoToken::Ident) {
            Ok(token) => NoAST::new_folha(RegraAST::Ident(token)),
            Err(erro_sintatico) => return erro_sintatico
        };
        filhos.push(ident);
        
        let identificador2 = self.identificador2();
        if identificador2.is_erro() {
            return identificador2
        }
        filhos.push(identificador2);

        let dimensao = self.dimensao();
        if dimensao.is_erro() {
            return dimensao
        }
        filhos.push(dimensao);

        NoAST::new(RegraAST::Identificador, filhos)
    }

    /// identificador2 : '.' IDENT identificador2 | <<vazio>>
    fn identificador2(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::Ponto => {
                match self.match_(TipoToken::Ponto) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let ident = match self.match_(TipoToken::Ident) {
                    Ok(token) => NoAST::new_folha(RegraAST::Ident(token)),
                    Err(erro_sintatico) => return erro_sintatico
                };
                filhos.push(ident);
                
                let identificador2 = self.identificador2();
                if identificador2.is_erro() {
                    return identificador2
                }
                filhos.push(identificador2);

                NoAST::new(RegraAST::Identificador2, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// identificadores: ',' identificador identificadores | <<vazio>>
    fn identificadores(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::Virgula => {
                match self.match_(TipoToken::Virgula) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let identificador = self.identificador();
                if identificador.is_erro() {
                    return identificador
                }
                filhos.push(identificador);

                let identificadores = self.identificadores();
                if identificadores.is_erro() {
                    return identificadores
                }
                filhos.push(identificadores);

                NoAST::new(RegraAST::Identificadores, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// dimensao : '[' exp_aritmetica ']' dimensao | <<vazio>>
    fn dimensao(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::AbreCol => {
                match self.match_(TipoToken::AbreCol) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let exp_aritmetica = self.exp_aritmetica();
                if exp_aritmetica.is_erro() {
                    return exp_aritmetica
                }
                filhos.push(exp_aritmetica);

                match self.match_(TipoToken::FechaCol) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let dimensao = self.dimensao();
                if dimensao.is_erro() {
                    return dimensao
                }
                filhos.push(dimensao);

                NoAST::new(RegraAST::Dimensao, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// tipo : registro | tipo_estendido
    fn tipo(&mut self) -> NoAST {
        match self.lookahead(1).tipo() {
            TipoToken::PCregistro => self.registro(),
            TipoToken::Circunflexo
            | TipoToken::PCliteral
            | TipoToken::PCinteiro
            | TipoToken::PCreal
            | TipoToken::PClogico
            | TipoToken::Ident => self.tipo_estendido(),
            _ => self.erro_sintatico()
        }
    }

    /// tipo_basico : 'literal' | 'inteiro' | 'real' | 'logico'
    fn tipo_basico(&mut self) -> NoAST {
        let token = match self.lookahead(1).tipo() {
            TipoToken::PCliteral => match self.match_(TipoToken::PCliteral) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            TipoToken::PCinteiro => match self.match_(TipoToken::PCinteiro) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            TipoToken::PCreal => match self.match_(TipoToken::PCreal) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            TipoToken::PClogico => match self.match_(TipoToken::PClogico) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            _ => return self.erro_sintatico()
        };
        
        NoAST::new_folha(RegraAST::TipoBasico(token))
    }

    /// tipo_basico_ident : tipo_basico | IDENT
    fn tipo_basico_ident(&mut self) -> NoAST {
        match self.lookahead(1).tipo() {
            TipoToken::PCliteral
            | TipoToken::PCinteiro
            | TipoToken::PCreal
            | TipoToken::PClogico => self.tipo_basico(),
            TipoToken::Ident => {
                let ident = match self.match_(TipoToken::Ident) {
                    Ok(token) => token,
                    Err(erro_sintatico) => return erro_sintatico
                };
                NoAST::new_folha(RegraAST::Ident(ident))
            }
            _ => self.erro_sintatico()
        }
    }

    /// tipo_estendido : circunflexo tipo_basico_ident
    fn tipo_estendido(&mut self) -> NoAST {
        let mut filhos = vec![];

        let circunflexo = self.circunflexo();
        if circunflexo.is_erro() {
            return circunflexo
        }
        filhos.push(circunflexo);

        let tipo_basico_ident = self.tipo_basico_ident();
        if tipo_basico_ident.is_erro() {
            return tipo_basico_ident
        }
        filhos.push(tipo_basico_ident);

        NoAST::new(RegraAST::TipoExtendido, filhos)
    }

    /// circunflexo: '^' | <<vazio>>
    fn circunflexo(&mut self) -> NoAST {
        match self.lookahead(1).tipo() {
            TipoToken::Circunflexo => match self.match_(TipoToken::Circunflexo) {
                Ok(_) => NoAST::new_folha(RegraAST::Circunflexo),
                Err(erro_sintatico) => return erro_sintatico
            }
            _ => NoAST::vazio()
        }
    }

    /// valor_constante : CADEIA | NUM_INT | NUM_REAL | 'verdadeiro' | 'falso'
    fn valor_constante(&mut self) -> NoAST {
        let token = match self.lookahead(1).tipo() {
            TipoToken::Cadeia => match self.match_(TipoToken::Cadeia) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            TipoToken::NumInt => match self.match_(TipoToken::NumInt) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            TipoToken::NumReal => match self.match_(TipoToken::NumReal) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            TipoToken::PCverdadeiro => match self.match_(TipoToken::PCverdadeiro) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            TipoToken::PCfalso => match self.match_(TipoToken::PCfalso) {
                Ok(token) => token,
                Err(erro_sintatico) => return erro_sintatico
            }
            _ => return self.erro_sintatico()
        };

        NoAST::new_folha(RegraAST::ValorConstante(token))
    }

    /// registro : 'registro' variaveis 'fim_Registro' fecha_escopo
    fn registro(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.match_(TipoToken::PCregistro) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let variaveis = self.variaveis();
        if variaveis.is_erro() {
            return variaveis
        }
        filhos.push(variaveis);

        match self.match_(TipoToken::PCfimRegistro) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        filhos.push(NoAST::new_folha(RegraAST::FechaEscopo));
        
        NoAST::new(RegraAST::Registro, filhos)
    }
    
    /// variaveis : variavel variaveis | <<vazio>>
    fn variaveis(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::Ident => {
                let variavel = self.variavel();
                if variavel.is_erro() {
                    return variavel
                }
                filhos.push(variavel);

                let variaveis = self.variaveis();
                if variaveis.is_erro() {
                    return variaveis
                }
                filhos.push(variaveis);

                NoAST::new(RegraAST::Variaveis, filhos)
            },
            _ => NoAST::vazio()
        }
    }
    
    /// declaracao_global : 'procedimento' IDENT '(' parametros ')' declaracoes_locais cmds 'fim_procedimento' fecha_escopo
    ///     | 'funcao' IDENT '(' parametros ')' ':' tipo_estendido declaracoes_locais cmds 'fim_funcao' fecha_escopo
    fn declaracao_global(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::PCprocedimento => {
                match self.match_(TipoToken::PCprocedimento) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let ident = match self.match_(TipoToken::Ident) {
                    Ok(token) => NoAST::new_folha(RegraAST::Ident(token)),
                    Err(erro_sintatico) => return erro_sintatico
                };
                filhos.push(ident);
                
                match self.match_(TipoToken::AbrePar) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let parametros = self.parametros();
                if parametros.is_erro() {
                    return parametros
                }
                filhos.push(parametros);

                match self.match_(TipoToken::FechaPar) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let declaracoes_locais = self.declaracoes_locais();
                if declaracoes_locais.is_erro() {
                    return declaracoes_locais
                }
                filhos.push(declaracoes_locais);

                let cmds = self.cmds();
                if cmds.is_erro() {
                    return cmds
                }
                filhos.push(cmds);

                match self.match_(TipoToken::PCfimProcedimento) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }

                filhos.push(NoAST::new_folha(RegraAST::FechaEscopo));
                
                NoAST::new(RegraAST::DeclaracaoProcedimento, filhos)
            }
            TipoToken::PCfuncao => {
                match self.match_(TipoToken::PCfuncao) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let ident = match self.match_(TipoToken::Ident) {
                    Ok(token) => NoAST::new_folha(RegraAST::Ident(token)),
                    Err(erro_sintatico) => return erro_sintatico
                };
                filhos.push(ident);
                
                match self.match_(TipoToken::AbrePar) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let parametros = self.parametros();
                if parametros.is_erro() {
                    return parametros
                }
                filhos.push(parametros);

                match self.match_(TipoToken::FechaPar) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                match self.match_(TipoToken::Delim) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let tipo_estendido = self.tipo_estendido();
                if tipo_estendido.is_erro() {
                    return tipo_estendido
                }
                filhos.push(tipo_estendido);

                let declaracoes_locais = self.declaracoes_locais();
                if declaracoes_locais.is_erro() {
                    return declaracoes_locais
                }
                filhos.push(declaracoes_locais);

                let cmds = self.cmds();
                if cmds.is_erro() {
                    return cmds
                }
                filhos.push(cmds);

                match self.match_(TipoToken::PCfimFuncao) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                filhos.push(NoAST::new_folha(RegraAST::FechaEscopo));

                NoAST::new(RegraAST::DeclaracaoFuncao, filhos)
            }
            _ => self.erro_sintatico()
        }
    }

    /// declaracoes_locais : declaracao_local declaracoes_locais | <<vazio>>
    fn declaracoes_locais(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::PCdeclare
            | TipoToken::PCconstante
            | TipoToken::PCtipo => {
                let declaracao_local = self.declaracao_local();
                if declaracao_local.is_erro() {
                    return declaracao_local
                }
                filhos.push(declaracao_local);

                let declaracoes_locais = self.declaracoes_locais();
                if declaracoes_locais.is_erro() {
                    return declaracoes_locais
                }
                filhos.push(declaracoes_locais);

                NoAST::new(RegraAST::DeclaracoesLocais, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// parametro : var identificador identificadores ':' tipo_estendido
    fn parametro(&mut self) -> NoAST {
        let mut filhos = vec![];

        let var = self.var();
        if var.is_erro() {
            return var
        }
        filhos.push(var);

        let identificador = self.identificador();
        if identificador.is_erro() {
            return identificador
        }
        filhos.push(identificador);

        let identificadores = self.identificadores();
        if identificadores.is_erro() {
            return identificadores
        }
        filhos.push(identificadores);

        match self.match_(TipoToken::Delim) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let tipo_estendido = self.tipo_estendido();
        if tipo_estendido.is_erro() {
            return tipo_estendido
        }
        filhos.push(tipo_estendido);

        NoAST::new(RegraAST::Parametro, filhos)
    }

    /// parametros : parametro parametros2 | <<vazio>>
    fn parametros(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::PCvar
            | TipoToken::Ident => {
                let parametro = self.parametro();
                if parametro.is_erro() {
                    return parametro
                }
                filhos.push(parametro);

                let parametros2 = self.parametros2();
                if parametros2.is_erro() {
                    return parametros2
                }
                filhos.push(parametros2);

                NoAST::new(RegraAST::Parametros, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// parametros2 : ',' parametro parametros2 | <<vazio>>
    fn parametros2(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::Virgula => {
                match self.match_(TipoToken::Virgula) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let parametro = self.parametro();
                if parametro.is_erro() {
                    return parametro
                }
                filhos.push(parametro);

                let parametros2 = self.parametros2();
                if parametros2.is_erro() {
                    return parametros2
                }
                filhos.push(parametros2);

                NoAST::new(RegraAST::Parametros2, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// var : 'var' | <<vazio>>
    fn var(&mut self) -> NoAST {
        match self.lookahead(1).tipo() {
            TipoToken::PCvar => match self.match_(TipoToken::PCvar) {
                Ok(_) => NoAST::new_folha(RegraAST::Var),
                Err(erro_sintatico) => return erro_sintatico
            }
            _ => NoAST::vazio()
        }
    }

    /// corpo : declaracoes_locais cmds
    fn corpo(&mut self) -> NoAST {
        let mut filhos = vec![];

        let declaracoes_locais = self.declaracoes_locais();
        if declaracoes_locais.is_erro() {
            return declaracoes_locais
        }
        filhos.push(declaracoes_locais);

        let cmds = self.cmds();
        if cmds.is_erro() {
            return cmds
        }
        filhos.push(cmds);

        NoAST::new(RegraAST::Corpo, filhos)
    }

    /// cmd : cmdLeia | cmdEscreva | cmdSe | cmdCaso | cmdPara| cmdEnquanto
    ///     | cmdFaca | cmdAtribuicao | cmdChamada | cmdRetorne
    fn cmd(&mut self) -> NoAST {
        match self.lookahead(1).tipo() {
            TipoToken::PCleia => self.cmd_leia(),
            TipoToken::PCescreva => self.cmd_escreva(),
            TipoToken::PCse => self.cmd_se(),
            TipoToken::PCcaso => self.cmd_caso(),
            TipoToken::PCpara => self.cmd_para(),
            TipoToken::PCenquanto => self.cmd_enquanto(),
            TipoToken::PCfaca => self.cmd_faca(),
            TipoToken::Circunflexo => self.cmd_atribuicao(),
            TipoToken::Ident => {
                match self.lookahead(2).tipo() {
                    TipoToken::AbrePar => self.cmd_chamada(),
                    _ => self.cmd_atribuicao()
                }
            }
            TipoToken::PCretorne => self.cmd_retorne(),
            _ => self.erro_sintatico()
        }
    }

    /// cmds : cmd cmds | <<vazio>>
    fn cmds(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::PCleia | TipoToken::PCescreva | TipoToken::PCse | TipoToken::PCcaso
            | TipoToken::PCpara | TipoToken::PCenquanto | TipoToken::PCfaca | TipoToken::Circunflexo
            | TipoToken::Ident | TipoToken::PCretorne => {
                let cmd = self.cmd();
                if cmd.is_erro() {
                    return cmd
                }
                filhos.push(cmd);

                let cmds = self.cmds();
                if cmds.is_erro() {
                    return cmds
                }
                filhos.push(cmds);

                NoAST::new(RegraAST::CMDs, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// cmdLeia : 'leia' '(' circunflexo identificador cmdLeia2 ')'
    fn cmd_leia(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.match_(TipoToken::PCleia) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        match self.match_(TipoToken::AbrePar) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let circunflexo = self.circunflexo();
        if circunflexo.is_erro() {
            return circunflexo
        }
        filhos.push(circunflexo);

        let identificador = self.identificador();
        if identificador.is_erro() {
            return identificador
        }
        filhos.push(identificador);

        let cmd_leia2 = self.cmd_leia2();
        if cmd_leia2.is_erro() {
            return cmd_leia2
        }
        filhos.push(cmd_leia2);

        match self.match_(TipoToken::FechaPar) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        NoAST::new(RegraAST::CMDLeia, filhos)
    }

    /// cmdLeia2 : ',' circunflexo identificador cmdLeia2 | <<vazio>>
    fn cmd_leia2(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.lookahead(1).tipo() {
            TipoToken::Virgula => {
                match self.match_(TipoToken::Virgula) {
                    Ok(_) => {},
                    Err(erro_sintatico) => return erro_sintatico
                }
                
                let circunflexo = self.circunflexo();
                if circunflexo.is_erro() {
                    return circunflexo
                }
                filhos.push(circunflexo);

                let identificador = self.identificador();
                if identificador.is_erro() {
                    return identificador
                }
                filhos.push(identificador);

                let cmd_leia2 = self.cmd_leia2();
                if cmd_leia2.is_erro() {
                    return cmd_leia2
                }
                filhos.push(cmd_leia2);

                NoAST::new(RegraAST::CMDLeia2, filhos)
            }
            _ => NoAST::vazio()
        }
    }

    /// cmdEscreva : 'escreva' '(' expressao expressoes ')'
    fn cmd_escreva(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.match_(TipoToken::PCescreva) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        match self.match_(TipoToken::AbrePar) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let expressao = self.expressao();
        if expressao.is_erro() {
            return expressao
        }
        filhos.push(expressao);

        let expressoes = self.expressoes();
        if expressoes.is_erro() {
            return expressoes
        }
        filhos.push(expressoes);

        match self.match_(TipoToken::FechaPar) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        NoAST::new(RegraAST::CMDEscreva, filhos)
    }

    /// cmdSe : 'se' expressao 'entao' cmds senao 'fim_se'
    fn cmd_se(&mut self) -> NoAST {
        let mut filhos = vec![];

        match self.match_(TipoToken::PCse) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let expressao = self.expressao();
        if expressao.is_erro() {
            return expressao
        }
        filhos.push(expressao);

        match self.match_(TipoToken::PCentao) {
            Ok(_) => {},
            Err(erro_sintatico) => return erro_sintatico
        }
        
        let cmds = self.cmds();
        if cmds.is_erro() {
            return cmds
        }
        filhos.push(cmds);

        let senao = self.senao();
        if senao.is_erro() {
            return senao
        }
        filhos.push(senao);
